# esp32-sWatch

./: CMakeLists.txt  README.md  sdkconfig
documents/: 元器件清单.XLSX
main/: CMakeLists.txt  main.c
main/bsp_applications/macBSP/: CMakeLists.txt
main/bsp_applications/macBSP/Inc/: bsp_bmp280.h  bsp_hwtimer.h  bsp_key.h  bsp_mpu6050.h
main/bsp_applications/macBSP/Src/: bsp_bmp280.c  bsp_hwtimer.c  bsp_key.c  bsp_mpu6050.c
main/bsp_applications/macSYS/: CMakeLists.txt
main/bsp_applications/macSYS/Inc/: bsp_sys.h
main/bsp_applications/macSYS/Src/: bsp_sys.c
main/components/lvgl/env_support/cmake/: esp.cmake
main/components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.c  lvgl_helpers.h
main/components/lvgl_esp32_drivers/lvgl_tft/: disp_spi.h  esp_lcd_backlight.c  ili9341.c  st7789.c
main/components/lvgl_esp32_drivers/lvgl_touch/: Kconfig  cst816.c  cst816.h  touch_driver.h
main/components/lvgl_porting/: CMakeLists.txt  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
main/user_tasks/Inc/: gui_tasks.h
main/user_tasks/Src/: gui_tasks.c
